--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A community networking board. A Code Nation project.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "bootstrap": "npm install && cd frontend && npm install"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/kjkent/lokl/issues"
   },
-  "homepage": "https://github.com/kjkent/lokl#readme"
+  "homepage": "https://github.com/kjkent/lokl#readme",
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^6.0.4"
+  }
 }
