--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A community networking board. A Code Nation project.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "bootstrap": "npm install && cd frontend && npm install"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
