--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A community networking board. A Code Nation project.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"start": "./node_modules/nodemon/bin/nodemon.js index.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
