--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"start": "./node_modules/nodemon/bin/nodemon.js index.js"
+	  "dev": "./node_modules/nodemon/bin/nodemon.js index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
