--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	  "dev": "./node_modules/nodemon/bin/nodemon.js index.js",
+    "dev": "./node_modules/nodemon/bin/nodemon.js index.js",
     "start": "node index.js"
   },
   "repository": {
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/kjkent/lokl#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.4"
